Changes for v2.06
-- Release build 1
- Tweaked RMPB and included it as a publicly available new application (Graham)
- Added "Using RMPB" to the Help menus of each of RMIR, RM and RMPB (Graham)
-- Release build 2
- Fix two bugs in RMPB import from protocols.ini (Graham)

Changes for v2.05
-- Private build 1
- Added MAXQ executor for Apple protocol to protocols.ini (Graham)
- Updated digitmaps.bin to 689 (Dave Reed)
- Added RDF, map and image for Monster Revolution 200 (Graham)
- Updated RDFs for XSight/Nevo remotes (Graham)
-- Release build 2
- Added support for firmware upgrades for XSight Lite/Plus and Monster remotes (Graham)
- Fix bug that created duplicates in list when download offered choice of remotes (Graham)
- Fix bug in analyzer of MAXQ protocols (Graham)
- Updated CommHID version number to 1.0 to reflect increase in functionality (Graham)
-- Private build 3
- Fix bug in operation of Edit Protocol button on Devices tab (Graham)
- Add radio buttons to Timing Summary to allow choice of raw and analyzed timings (Graham)
- Add further features to Timing Summary, including conversion of burst pairs to user-specified code strings (Graham)
-- Private build 4
- Debugging and improvements to Learned Signal analysis and timing summary (Graham)
-- Private build 5
- Further improvements to Learned Signal analysis and timing summary (Graham)
- Add Delete All button to RMTablePanel and activate it for Learned Signal Panel (Graham)
- Add new option "Same sig = same remote" in Options > Advanced, preventing need to choose RDF when repeatedly downloading same remote (Graham)
-- Private build 6
- Further debugging of Vyrolan's code for learned signal analysis (Graham)
- Add button to Advanced Details section of learned signal edit panel to unlock rounding after it has been set (Graham)
- Add further option to Suppress Messages menu to suppress the most common confirmation messages (Graham)
-- Private build 7
- Add pid: 00FD executor to protocols.ini (Graham)