@@ -4,6 +4,8 @@ Changes for v2.06
 - Added "Using RMPB" to the Help menus of each of RMIR, RM and RMPB (Graham)
 -- Release build 2
 - Fix two bugs in RMPB import from protocols.ini (Graham)
+-- Release build 3
+- Fix bug in the order of entries returned by Remote.getDeviceTypes() (Graham)
 
 Changes for v2.05
 -- Private build 1
